--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,7 +1,7 @@
-name: pc
-version: '16.04-0.9'
+name: classic-gadget-kyle-1
+version: 'classic-test-1'
 type: gadget
-summary: PC gadget for generic devices
+summary: PC gadget for  classic
 description: |
     This gadget enables generic pc devices to work with Ubuntu Core
 grade: stable
@@ -9,11 +9,9 @@ confinement: strict
 icon: icon.png
 
 parts:
-  grub:
-    source: .
-    plugin: make
-    build-packages:
-      - grub-efi-amd64-signed
-      - grub-pc-bin
-      - shim-signed
-        
+  hooks:
+    plugin: dump
+    source: hooks
+    organize:
+      prepare-device: snap/hooks/prepare-device
+
